# PECAN

./: .gitignore  .gitmodules  5.3-km-Intensive-Sphere-Explorations.ipynb  LICENSE.md  README.md  pyproject.toml  requirements.txt  ripser_module_tests.py  setup.py
.imdone/: config.yml
Notebooks/: 1.0-km-Diffusion-to-find-Betti-Numbers.ipynb  3.0-km-Experiments with OR Curvature from DEMD.ipynb  5.0-km-DiffusionForkCurvature.ipynb  5.3-km-Diffusion Rays with Higher powers of t.ipynb  6.0-km-Finding Midpoints by Intersecting Diffusions.ipynb  SUMRY 2021 Diffusion Topology DB.ipynb  Untitled1.ipynb  tests.ipynb
Notebooks/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
experiment_lawvere/: diffu_map.ipynb  diffu_map_correct.ipynb  functions.py  lawvere_homology.ipynb  sinewave_petals.ipynb  spiral_petals.ipynb  test_phate.ipynb
make_datasets/: 4pt_example.ipynb  plot-sphere.ipynb  plot-spiral.ipynb  plot-swiss_roll.ipynb  plot-swiss_roll_hole.ipynb  run_sphere.sh  run_spiral.sh  run_swiss_roll.sh  run_swiss_roll_hole.sh  sphere.ipynb  spiral.ipynb  spiral.txt  spiral2.txt  swiss_roll.ipynb  swiss_roll.txt  swiss_roll_hole.txt
notebooks/: 1.0-edb-vineyards.ipynb  2.0-edb-dc-homology-plot-all-diffu_time_3.ipynb  2.0-edb-dc-homology-plot-all-diffu_time_5.ipynb  2.0-edb-dc-homology-plot-all.ipynb  2.0-edb-dc-homology.ipynb  2.0-edb-vineyards_oineus.ipynb  2.0-km-Higher-Betti-numbers-from-eigenanalysis.ipynb  6.1-km-Can MID detect curvature.ipynb  SUMRY 2021 Diffusion Topology DB.ipynb  Untitled2.ipynb
pecan/: 3.0-km-Experiments with OR Curvature from DEMD.ipynb  MID.py  Makefile  Untitled.ipynb  analyse_contraction.py  analyse_hausdorff_distance.py  analyse_intrinsic_distance.py  analyse_merge_thresholds.py  analyse_metric_space.py  analyse_persistence.py  analyse_total_persistence.py  calculate_intrinsic_diffusion_homology.py  callbacks.py  condensation.py  convex_hull.py  curvature.py  curvature_utils.py  data.py  extract_data.py  functor.py  general_position.py  kernels.py  make_animation.py  make_diffusion_homology_figures.py  make_figures.py  oineus_integration.py  oineus_testing.py  petals_n128_s1623355591.npz  ripser.py  topology.py  utilities.py  vineyards.py  vineyards_oineus.py  visualise.py  visualise_diffusion_homology.py  visualise_merge_tree.py  visualise_persistent_homology.py  visualise_persistent_homology_trajectories.py  visualise_tangent_space.py  visualise_vines.py
pecan/.ipynb_checkpoints/: MID-checkpoint.py  curvature-checkpoint.py  (+3 more)
tests/: test_pecan.py
(+12 files in other folders)
