[tool.poetry]
name = "pecan"
version = "0.1.0"
description = "PECAN: Persistent Condensation"
authors = ["Bastian Rieck <bastian.rieck@bsse.ethz.ch>"]

[tool.poetry.dependencies]
python = ">=3.7.1"
numpy = "^1.19.4"
scikit-learn = "^0.23.2"
matplotlib = "^3.3.3"
scipy = "^1.5.4"
yaspin = "^1.2.0"
pandas = "^1.2.0"
seaborn = "^0.11.1"
ripser = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
