[tool.poetry]
name = "pecan"
version = "0.1.0"
description = "PECAN: Persistent Condensation"
authors = ["Bastian Rieck <bastian.rieck@bsse.ethz.ch>"]

[tool.poetry.dependencies]
python = ">=3.7.1"
numpy = "^1.19.4"
scikit-learn = "^0.23.2"
matplotlib = "^3.3.3"
scipy = "^1.5.4"
yaspin = "^1.2.0"
pandas = "^1.2.0"
seaborn = "^0.11.1"
pyrivet = {git = "https://github.com/Pseudomanifold/rivet-python"}
tadasets = "^0.0.4"
Cython = "^0.29.23"
POT = "^0.7.0"
graphtools = "^1.5.2"
plotly = "^5.1.0"
GraphRicciCurvature = "^0.5.3"
ripser = "^0.6.0"
PersistenceImages = "^1.3.3"
jupyterlab = "^3.0.16"
jupyterlab-widgets = "^1.0.0"
ipywidgets = "^7.6.3"
nodejs = "^0.1.1"
nbformat = "^5.1.3"
pydiffmap = "^0.2.0"
tqdm = "^4.61.2"
phate = "^1.0.7"
PersistenceImages = "^1.3.3"
GraphRicciCurvature = "^0.5.3"
ripser = "^0.6.0"
jupyterlab = "^3.0.16"
jupyterlab-widgets = "^1.0.0"
ipywidgets = "^7.6.3"
nodejs = "^0.1.1"
ipympl = "^0.7.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
black = {version = "^21.6b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
