[tool.poetry]
name = "pecan"
version = "0.1.0"
description = "PECAN: Persistent Condensation"
authors = ["Bastian Rieck <bastian.rieck@bsse.ethz.ch>"]

[tool.poetry.dependencies]
python = ">3.8,<3.10"
numpy = "^1.19.4"
scikit-learn = ">=0.23.2"
matplotlib = "^3.3.3"
scipy = "^1.5.4"
yaspin = "^1.2.0"
pandas = "^1.2.0"
seaborn = "^0.11.1"
pyrivet = {git = "https://github.com/Pseudomanifold/rivet-python"}
tadasets = "^0.0.4"
Cython = "^0.29.23"
tqdm = "^4.61.2"
scikit-dimension = "^0.3.2"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
black = {version = "^21.6b0", allow-prereleases = true}
pyflakes = "^2.5.0"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
